@@ -931,7 +931,7 @@ Is & $I_{S}$ & bulk junction saturation current & $\ampere$ & $10^{-14}$\\
 N & $N$ & bulk junction emission coefficient &  & $1.0$\\
 Vt0 & $V_{T0}$ & zero-bias threshold voltage & $\volt$ & $0.0$\\
 Lambda & $\lambda$ & channel-length modulation parameter & $1/\volt$ & $0.0$\\
-Kp & $K_P$ & transconductance coefficient & $\ampere/\meter^2$ & $2.0\cdot 10^{-5}$\\
+Kp & $K_P$ & transconductance coefficient & $\ampere/\volt^2$ & $2.0\cdot 10^{-5}$\\
 Gamma & $\gamma$ & bulk threshold & $\sqrt{\volt}$ & $0.0$\\
 Phi & $\Phi$ & surface potential & $\volt$ & $0.6$\\
 Rd & $R_D$ & drain ohmic resistance & $\ohm$ & $0.0$\\
