@@ -1,3 +1,8 @@
+2004-10-23  Stefan Jahn  <stefan@lkcc.org>
+
+	* devices/mosfet.cpp: Fixed tiny bug in calculation of threshold
+	voltage (requested by default value 0).
+
 2004-10-21  Stefan Jahn  <stefan@lkcc.org>
 
 	* devices/mosfet.cpp: Applied trapezoidal rule to Meyer
