@@ -1,3 +1,8 @@
+2004-10-23  Stefan Jahn  <stefan@lkcc.org>
+
+	* devices.tex (section{MOS Field-Effect Transistor}): Fixed
+	unit of transconductance parameter.
+
 2004-10-19  Stefan Jahn  <stefan@lkcc.org>
 
 	* literature.bib: Two new references added.
